# pyWSP

./: README.md  pyproject.toml  requirements_dev.txt
pywsp/: __init__.py  api.py  callback.py  client.py  const.py  exceptions.py  factory.py  message.py  server.py  socket.py
tests/: __init__.py  messageserialization1.py  messageserialization2.py  messageserialization3.py  test_api.py  test_basic_protocol.py  test_message_factory.py
