[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pywsp"
authors = [
    { name = "Bruno Kraychete da Costa", email = "brunokc@kraychete.com" },
]
description = "A simple Python helper library that simplifies protocol implementation on top of WebSockets."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "pywsp.__version__" }
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
pywsp = ["py.typed"]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
asyncio_mode = "auto"
